<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".presentation.movie.MovieFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/movieAppBar"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/surface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|snapMargins"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/ivMoviePoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_image_description"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/blank" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/movieToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetEnd="20dp"
                app:contentInsetStart="20dp"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/movie_toolbar_button_width"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:background="@drawable/bg_opacity"
                    android:contentDescription="@string/back_button"
                    android:elevation="2dp"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/btnFavorite"
                    android:layout_width="@dimen/movie_toolbar_button_width"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/bg_opacity"
                    android:contentDescription="@string/favorite_button"
                    android:elevation="2dp"
                    android:src="@drawable/ic_heart"
                    app:tint="@color/white" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movieContentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:behavior_overlapTop="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/flOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_movie_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="32dp">

            <View
                android:id="@+id/vTouch"
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_button" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="Movie title" />

            <TextView
                android:id="@+id/tvTagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Movie tagline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    app:drawableStartCompat="@drawable/ic_favorites"
                    android:paddingStart="8dp"
                    android:paddingEnd="10dp"
                    android:paddingVertical="6dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    style="@style/TextViewMovieRatingText"
                    app:drawableTint="@color/white"
                    tools:text="8.2" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_date"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    style="@style/TextViewMovieInfo"
                    tools:text="2026" />

                <TextView
                    android:layout_marginStart="20dp"
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_clock"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    style="@style/TextViewMovieInfo"
                    tools:text="2026" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewMovieInfo"
                tools:text="Budget: $120M" />

            <TextView
                android:id="@+id/tvRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/TextViewMovieInfo"
                tools:text="Revenue: $220M" />

        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                tools:listitem="@layout/genre_item"
                android:clipToPadding="false"
                android:orientation="horizontal"
                tools:itemCount="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@color/primary" />

            <LinearLayout
                android:id="@+id/llOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/overview_icon"
                    android:src="@drawable/ic_description" />

                <TextView
                    style="@style/TextViewSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-1dp"
                    android:layout_weight="1"
                    android:text="@string/overview"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/arrow_overview"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                style="@style/TextViewMovieOverview"
                tools:text="Overview" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@color/primary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
